# TweetToLine

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/: config.py  get_tweet.py  main.py  send_message.py
